--- a/src/components/timeline-slicer/index.css
+++ b/src/components/timeline-slicer/index.css
@@ -1,6 +1,7 @@
 .ui-container {
   display: flex;
-  width: 100%;
+  min-width: fit-content;
+  width: "100%";
   flex-direction: row;
   overflow-x: auto;
   padding: 5px;
@@ -9,12 +10,13 @@
 .sub-container {
   display: flex;
   min-width: fit-content;
+  width: "100%";
   flex-direction: row;
   padding: 5px;
+  background-color: pink;
 }
 
 .year-box {
-  min-width: 50px;
   padding: 5px;
 }
 
