--- a/src/components/timeline-slicer/index.css
+++ b/src/components/timeline-slicer/index.css
@@ -26,3 +26,36 @@
 .flex-box + .flex-box {
   margin-left: 5px;
 }
+
+.thumb::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 75px;
+  background: #04aa6d;
+  cursor: pointer;
+  position: relative;
+  top: 40px;
+  pointer-events: all;
+}
+
+.thumb {
+  -webkit-appearance: none;
+  width: 100%;
+  display: block;
+  height: 4px;
+  /* background: #d3d3d3; */
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  background-color: pink;
+  pointer-events: none;
+}
+
+.thumb::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04aa6d;
+  cursor: pointer;
+}
